# svante

./: .codacy.yml  .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle  .readthedocs.yml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  FUNDING.rst  LICENSE  LICENSE.rst  README.rst  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt  usage.rst
src/svante/: __init__.py  __main__.py  combine.py  common.py  plot.py  stat_dict.py
svante/: __init__.py  __main__.py  combine.py  common.py  plot.py  stat_dict.py  statsdict.py
tests/: 0_cli_test.py  1_datadir_test.py  1_init_datadir.py  2_combine_test.py  3_plot_test.py  4_stats_test.py  __init__.py  git_4_stats.py  test_0_cli.py  test_1_datadir.py  test_2_combine.py  test_3_plot.py  test_main.py
tests/testdata/: Mb_D2O.tsv  Mb_H2O.tsv  dielectric_relaxation.toml  fake_d2o.tsv  fake_h2o.tsv  mb_dielectric_relaxation.toml  mb_dielectric_relaxation.tsv
