[project]
name = "svante"
version = "0.4.0"
description = "Configurable Arrhenius plots with uncertainties and ratios"
authors = [
    {name = "Joel Berendzen", email = "joel@generisbio.com"},
]
dependencies = [
    "attrs>=23.1.0",
    "colorama>=0.4.6",
    "loguru>=0.7.2",
    "matplotlib>=3.8.3",
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "pint>=0.23",
    "pyarrow>=15.0.0",
    "pydove>=0.3.5",
    "schema>=0.7.5",
    "scipy>=1.12.0",
    "shellingham>=1.5.4",
    "statsdict>=0.1.8",
    "tabulate>=0.9.0",
    "toml>=0.10.2",
    "tqdm>=4.66.2",
    "typer>=0.9.0",
    "uncertainties>=3.1.7",
]
requires-python = ">=3.9,<3.13"
readme = "README.rst"
license = {text = "BSD-3-Clause"}
homepage = "https://github.com/hydrationdynamics/svante"
repository = "https://github.com/hydrationdynamics/svante"
documentation = "https://svante.readthedocs.io"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry"
]
keywords = [
    "science",
    "chemistry",
    "physical chemistry",
    "kinetics",
    "rate coefficients",
    "temperature dependence"
]

[project.scripts]
svante = "svante.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
source = ["svante"]
concurrency = ["multiprocessing"]
sigterm = true
parallel = true
relative_files = true

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unused_ignores = false

[tool.pdm.dev-dependencies]
tests = [
    "pygments>=2.16.1",
    "numpy>=1.26.1",
    "pandas>=2.1.3",
    "pandas-stubs>=2.1.1.230928",
    "pytest-datadir-mgr>=1.3.4",
    "coverage[toml]>=7.4.0",
    "mypy>=1.8.0",
    "typeguard>=4.1.5",
    "pytest>=8.0.2",
    "sh>=2.0.6",
    "types-toml>=0.10.8.7",
]
docs = [
    "furo>=2023.9.10",
    "linkify-it-py>=2.0.2",
    "sphinx>=7.2.6",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-click>=5.0.1",
    "myst-parser>=2.0.0",
    "sphinx-rtd-theme>=2.0.0",
]
safety = [
    "safety>=2.3.5",
]
pre-commit = [
    "pre-commit>=3.5.0",
    "pre-commit-hooks>=4.5.0",
    "ruff>=0.1.5",
]
xdoctest = [
    "xdoctest[colors]>=1.1.2",
]
coverage = [
    "coverage>=7.4.0",
]

[tool.pytest.ini_options]
addopts = ["-x"]

[tool.ruff]
src = ['src', 'tests']
line-length = 88
target-version = 'py39'

[tool.ruff.lint]
select = [
  'A',
  'ARG',
  'B',
  'B9',
  'BLE',
  'C',
  'C4',
  'D',
  'DTZ',
  'E',
  'F',
  'I',
  'N',
  'PIE',
  'PT',
  'PTH',
  'Q',
  'RET',
  'RUF',
  'S',
  'SIM',
  'SLF',
  'T10',
  'TCH',
  'UP',
  'W',
]

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ['F401']
"tests/*" = [
    'D104',
    'D205',
    'D212',
    'D415',
    'D205',
    'D104',
    'S101'
]
"analysis/*" = [
    'N806'
]

[tool.ruff.lint.pydocstyle]
convention = 'google'

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
